--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /Conditional(if_else)/nbproject/private/
 /Conditional(if_else)/dist/
 /Conditional(if_else)/build/
+/Java_Basic_Programs/nbproject/private/
+/Java_Basic_Programs/build/
